--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'maven-publish'
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2'
 description = 'Demo project for Spring Boot'
 
 java {
@@ -19,6 +20,20 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			from components.java
+		}
+	}
+	repositories {
+		maven {
+			url = uri("D:\\SpringBoot\\RydeProject-EntityService")
+		}
+	}
+}
+
 
 repositories {
 	mavenCentral()
