--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.application.name=RydeProject-EntityService
 server.port=9092
 
 //DataBase
-spring.datasource.url=jdbc:mysql://localhost:3306/Ryde_DB_Local
+spring.datasource.url=jdbc:mysql://localhost:3306/ryde_db_local
 spring.datasource.username=root
 spring.datasource.password=sadik
 #Show the current excuted query on console
+
 spring.jpa.show-sql=true 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
@@ -15,9 +16,9 @@ logging.level.org.springframework.data=debug
 
 spring.flyway.baseline-on-migrate=true
 
-spring.flyway.url=jdbc:mysql://localhost:3306/Ryde_DB_Local
-spring.flyway.password=sadik
-spring.flyway.user=root
+#spring.flyway.url=jdbc:mysql://localhost:3306/Ryde_DB_Local
+#spring.flyway.password=sadik
+#spring.flyway.user=root
 
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
