--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=RydeProject-EntityService
+#spring.application.name=RydeProject-EntityService
 
-server.port=9092
+#server.port=9092
 
 //DataBase
 spring.datasource.url=jdbc:mysql://localhost:3306/ryde_db_local
